# manipulation_interface_example

./: CMakeLists.txt  CMakeLists.txt.user.047025a.22  CMakeLists.txt.user.b0ba6d1.4.8-pre1  README.md  package.xml
config/: L_plate_teaching_scene.yaml  colored_cubes_scene.yaml  cube_teaching_scene.yaml  go_to_location.yaml  green_cube_scene.yaml  inbound_boxes.yaml  light_blue_cube_scene.yaml  little_cube_teaching_scene.yaml  multi_skills.yaml  object_scene.yaml  objects_description.yaml  objects_distribution.yaml  outbound_slots_groups.yaml  pink_cube_scene.yaml  plate_teaching_scene.yaml  slots_distribution.yaml  static_scene.yaml  white_cube_scene.yaml  yellow_cube_scene.yaml
launch/: L_plate_teaching_scene_spawner.launch  colored_cube_scenes_spawner.launch  cube_teaching_scene_spawner.launch  green_cube_scene_spawner.launch  light_blue_cube_scene_spawner.launch  load_example_objects_distribution_param.launch  object_scene_spawner.launch  pink_cube_scene_spawner.launch  plate_teaching_spawner.launch  save_operator_example_param.launch  scene_spawner.launch  test_programming_scene_spawner.launch  white_cube_scene_spawner.launch  yellow_cube_scene_spawner.launch
src/: data_graph.py  mongo_set_example_operator_param.py
